--- a/src/app.css
+++ b/src/app.css
@@ -6,6 +6,7 @@
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #282d39;
+  /* background-color: blue; */
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -13,12 +14,41 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-@media (prefers-reduced-motion: reduce) {
-  body {
-    background-color: red; /* Match the background color of your page */
-  }
+
+@font-face {
+  font-family:Work Sans;
+  src:url(https://tools.dillerm.io/lib/fonts/worksans/WorkSans-Regular.woff2) format("woff2"),
+  url(https://tools.dillerm.io/lib/fonts/worksans/WorkSans-Regular.ttf) format("truetype");
+  font-weight:400;
+  font-style:normal
+}
+@font-face {
+  font-family:Work Sans;
+  src:url(https://tools.dillerm.io/lib/fonts/worksans/WorkSans-Italic.woff2) format("woff2"),
+  url(https://tools.dillerm.io/lib/fonts/worksans/WorkSans-Italic.ttf) format("truetype");
+  font-weight:400;
+  font-style:italic
+}
+@font-face {
+  font-family:Work Sans;
+  src:url(https://tools.dillerm.io/lib/fonts/worksans/WorkSans-Bold.woff2) format("woff2"),
+  url(https://tools.dillerm.io/lib/fonts/worksans/WorkSans-Bold.ttf) format("truetype");
+  font-weight:700;
+  font-style:normal
+}
+@font-face {
+  font-family:Work Sans;
+  src:url(https://tools.dillerm.io/lib/fonts/worksans/WorkSans-ExtraBold.woff2) format("woff2"),
+  url(https://tools.dillerm.io/lib/fonts/worksans/WorkSans-ExtraBold.ttf) format("truetype");
+  font-weight:800;
+  font-style:normal
 }
 
+* {
+	box-sizing: border-box;
+	font-family: Work Sans, 'Courier New', Courier, monospace;
+	color: #d0d0d3;
+}
 
 * {
   box-sizing: border-box;
