added tauri and a bunch of stuuuuuff

--- a/src/app.css
+++ b/src/app.css
@@ -1,11 +1,10 @@
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #282d39;
+  /* background-color: #282d39; */
   /* background-color: blue; */
 
   font-synthesis: none;
@@ -115,7 +114,7 @@ button:focus-visible {
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
-    background-color: #ffffff;
+    /* background-color: #ffffff; */
   }
   a:hover {
     color: #747bff;
