fuckin done for now. this component library shit is pissing me off cuz idk how to use it properly. makin progress though. gotta start implementing some logic next, but cant do that now

--- a/src/app.css
+++ b/src/app.css
@@ -1,6 +1,10 @@
 :root {
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
+
+  --backcolor-1: 220, 18%, 19%;
+  --backcolor-2: 218, 18%, 13%;
+  --backcolor-3: 218, 18%, 10%;
 }
 
 
