--- a/src/shadcn_app.css
+++ b/src/shadcn_app.css
@@ -3,66 +3,69 @@
 @tailwind utilities;
 
 @layer base {
-  :root {
-    --background: 0 0% 100%;
-    --foreground: 222.2 84% 4.9%;
-    --muted: 210 40% 96.1%;
-    --muted-foreground: 215.4 16.3% 46.9%;
-    --popover: 0 0% 100%;
-    --popover-foreground: 222.2 84% 4.9%;
-    --card: 0 0% 100%;
-    --card-foreground: 222.2 84% 4.9%;
-    --border: 214.3 31.8% 91.4%;
-    --input: 214.3 31.8% 91.4%;
-    --primary: 222.2 47.4% 11.2%;
-    --primary-foreground: 210 40% 98%;
-    --secondary: 210 40% 96.1%;
-    --secondary-foreground: 222.2 47.4% 11.2%;
-    --accent: 210 40% 96.1%;
-    --accent-foreground: 222.2 47.4% 11.2%;
-    --destructive: 0 72.2% 50.6%;
-    --destructive-foreground: 210 40% 98%;
-    --ring: 222.2 84% 4.9%;
-    --radius: 0.5rem;
-	--sidebar-background: 0 0% 98%;
-    --sidebar-foreground: 240 5.3% 26.1%;
-    --sidebar-primary: 240 5.9% 10%;
-    --sidebar-primary-foreground: 0 0% 98%;
-    --sidebar-accent: 240 4.8% 95.9%;
-    --sidebar-accent-foreground: 240 5.9% 10%;
-    --sidebar-border: 220 13% 91%;
-    --sidebar-ring: 217.2 91.2% 59.8%;
-  }
 
-  .dark {
-    --background: 222.2 84% 4.9%;
-    --foreground: 210 40% 98%;
-    --muted: 217.2 32.6% 17.5%;
-    --muted-foreground: 215 20.2% 65.1%;
-    --popover: 222.2 84% 4.9%;
-    --popover-foreground: 210 40% 98%;
-    --card: 222.2 84% 4.9%;
-    --card-foreground: 210 40% 98%;
-    --border: 217.2 32.6% 17.5%;
-    --input: 217.2 32.6% 17.5%;
-    --primary: 210 40% 98%;
-    --primary-foreground: 222.2 47.4% 11.2%;
-    --secondary: 217.2 32.6% 17.5%;
-    --secondary-foreground: 210 40% 98%;
-    --accent: 217.2 32.6% 17.5%;
-    --accent-foreground: 210 40% 98%;
-    --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 210 40% 98%;
-    --ring: 212.7 26.8% 83.9%;
-	--sidebar-background: 240 5.9% 10%;
-    --sidebar-foreground: 240 4.8% 95.9%;
-    --sidebar-primary: 224.3 76.3% 48%;
-    --sidebar-primary-foreground: 0 0% 100%;
-    --sidebar-accent: 240 3.7% 15.9%;
-    --sidebar-accent-foreground: 240 4.8% 95.9%;
-    --sidebar-border: 240 3.7% 15.9%;
-    --sidebar-ring: 217.2 91.2% 59.8%;
+  :root  {
+    --background: 220 23% 95%;
+    --foreground: 220 5% 8%;
+    --card: 220 23% 90%;
+    --card-foreground: 220 5% 10%;
+    --popover: 220 23% 95%;
+    --popover-foreground: 220 95% 8%;
+    --primary: 220 18.2% 12.9%;
+    --primary-foreground: 0 0% 100%;
+    --secondary: 220 23% 70%;
+    --secondary-foreground: 0 0% 0%;
+    --muted: 182 23% 85%;
+    --muted-foreground: 220 5% 35%;
+    --accent: 182 23% 80%;
+    --accent-foreground: 220 5% 10%;
+    --destructive: 0 50% 30%;
+    --destructive-foreground: 220 5% 90%;
+    --border: 220 23% 50%;
+    --input: 220 23% 18%;
+    --ring: 220 18.2% 12.9%;
+    --radius: 0.5rem;
   }
+  .dark  {
+    --dillercolor-foreground: 237, 7%, 97%
+    --dillercolor-1: 220 18% 19%;
+    --dillercolor-2: 218 19% 16%;
+    --dillercolor-3: 218 18% 13%;
+    --dillercolor-4: 218 18% 10%;
+    /* --dillercolor-accent: 210 100% 67%;
+    --dillercolor-accent-foreground: var(--dillercolor-2); */
+    --dillercolor-accent: var(--dillercolor-4);
+    --dillercolor-accent-foreground: var(--dillercolor-foreground);
+
+    --tempcolor-1: 120 23% 38%;
+    --tempcolor-2: 122 78% 37%; /* green */
+    --tempcolor-green: 122 78% 37%; /* green */
+    --tempcolor-purple: 296 78% 37%;
+    --tempcolor-purple: 296 78% 37%;
+    --tempcolor-blue: 235 83% 35%;
+
+    --background: var(--dillercolor-1);
+    --foreground: var(--dillercolor-foreground);
+    --card: var(--dillercolor-2);
+    --card-foreground: var(--dillercolor-foreground);
+    --popover: var(--dillercolor-2);
+    --popover-foreground: var(--dillercolor-foreground);
+    --primary: var(--tempcolor-purple);
+    --primary-foreground: var(--dillercolor-foreground);
+    --secondary: var(--tempcolor-purple);
+    --secondary-foreground: var(--dillercolor-foreground);
+    --muted: var(--tempcolor-purple);
+    --muted-foreground: var(--dillercolor-foreground);
+    --accent: var(--dillercolor-accent);
+    --accent-foreground: var(--dillercolor-accent-foreground);
+    --destructive: var(--tempcolor-purple);
+    --destructive-foreground: var(--dillercolor-foreground);
+    --border: var(--dillercolor-4);
+    --input: var(--dillercolor-3);
+    --ring: var(--tempcolor-green);
+    --radius: 0.5rem;
+  }
+  
 }
 
 @layer base {
